# convex-notes

./: .dockerignore  .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yml  package.json
backend/: Cargo.toml
backend/crates/cli/: Cargo.toml
backend/crates/cli/src/: app.rs  main.rs
backend/crates/cli/src/handlers/: create.rs  delete.rs  list.rs  mod.rs  update.rs  watch.rs
backend/crates/cli/src/ui/: banner.rs  mod.rs  table.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: config.rs  lib.rs  time.rs
backend/crates/convex-client/: Cargo.toml
backend/crates/convex-client/src/: client.rs  error.rs  lib.rs  repository.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: lib.rs
backend/crates/db/src/entity/: mod.rs  note.rs
backend/crates/db/src/repository/: mod.rs  traits.rs
backend/crates/db/src/service/: mod.rs  note_service.rs
backend/src/: main.rs
bun-cli/: package.json  tsconfig.json
bun-cli/src/: app.ts  config.ts  errors.ts  index.ts
bun-cli/src/entity/: note.ts
bun-cli/src/handlers/: create.ts  delete.ts  list.ts  update.ts  watch.ts
bun-cli/src/repository/: convex.ts  interface.ts
bun-cli/src/service/: note-service.ts
bun-cli/src/ui/: banner.ts  table.ts
convex/: notes.ts  schema.ts
frontend/: README.md  index.html  package.json
frontend/src/: main.tsx
frontend/src/hooks/: useNotes.ts
frontend/src/integrations/convex/: api.ts  provider.tsx
frontend/src/routes/: __root.tsx  index.tsx
go-cli/: go.mod  go.sum  main.go
go-cli/cmd/: app.go
go-cli/internal/entity/: note.go
go-cli/internal/handler/: create.go  delete.go  list.go  update.go
go-cli/internal/repository/: convex.go  interface.go
go-cli/internal/service/: note.go
go-cli/internal/ui/: banner.go  table.go
python-cli/: pyproject.toml
python-cli/src/convex_notes/: __init__.py  __main__.py  app.py
python-cli/src/convex_notes/entity/: __init__.py  note.py
python-cli/src/convex_notes/handlers/: __init__.py  create.py  delete.py  list_notes.py  update.py  watch.py
python-cli/src/convex_notes/repository/: __init__.py  base.py  convex.py
python-cli/src/convex_notes/service/: __init__.py  note_service.py
python-cli/src/convex_notes/ui/: __init__.py  banner.py  table.py
zig-cli/: .gitignore  build.zig
zig-cli/src/: app.zig  main.zig
zig-cli/src/entity/: note.zig
zig-cli/src/handler/: create.zig  delete.zig  list.zig
zig-cli/src/repository/: convex.zig
zig-cli/src/service/: note.zig
zig-cli/src/ui/: banner.zig  table.zig
zig-cli/src/utils/: zig016.zig
