[package]
name = "convex-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
convex = "0.10.2"
dotenvy = "0.15.7"
futures = "0.3.31"
maplit = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
