[package]
name = "convex-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
colored = "3.0.0"
convex = "0.10.2"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dotenvy = "0.15.7"
envconfig = "0.11.1"
futures = "0.3.31"
maplit = "1.0.2"
prettytable-rs = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
