[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Convex Notes"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Convex
convex = "0.10.2"
maplit = "1.0.2"

# CLI
colored = "3.0.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
prettytable-rs = "0.10.0"

# Utils
chrono = "0.4.42"
envconfig = "0.11.1"
dotenvy = "0.15.7"
