[package]
name = "convex-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
convex.workspace = true
futures.workspace = true
maplit.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

db = { path = "../db" }
